--- a/devops/ansible/variables/assets/index.html
+++ b/devops/ansible/variables/assets/index.html
@@ -34,6 +34,7 @@
         <h1>{{ node_name }}</h1>
         <p>Background Color: <strong>{{ page_bg_color }}</strong></p>
         <p>Hostname: <strong>{{ ansible_hostname }}</strong></p>
+        <p>Port: <strong>{{ apache_port }}</strong></p>
     </div>
 </body>
 </html>
